tests/suite/snapshots/suite__case_4hvu.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens:   - wrong\r\n"
  start:
    index: 29
    line: 3
    column: 0
  end:
    index: 29
    line: 3
    column: 0

