tests/suite/snapshots/suite__case_4jvg.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens:   &v2 val2\r\n"
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0

