tests/suite/snapshots/suite__case_4muz_00.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: MappingStart
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: DoubleQuote
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: DoubleQuoted
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 5
    line: 0
    column: 5
- token: DoubleQuote
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: Break
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 8
    line: 1
    column: 0
- token: Indent
  start:
    index: 8
    line: 1
    column: 0
  end:
    index: 8
    line: 1
    column: 0
- token: MappingValue
  start:
    index: 8
    line: 1
    column: 0
  end:
    index: 9
    line: 1
    column: 1
- token: Separator
  start:
    index: 9
    line: 1
    column: 1
  end:
    index: 10
    line: 1
    column: 2
- token: DoubleQuote
  start:
    index: 10
    line: 1
    column: 2
  end:
    index: 11
    line: 1
    column: 3
- token: DoubleQuoted
  start:
    index: 11
    line: 1
    column: 3
  end:
    index: 14
    line: 1
    column: 6
- token: DoubleQuote
  start:
    index: 14
    line: 1
    column: 6
  end:
    index: 15
    line: 1
    column: 7
- token: MappingEnd
  start:
    index: 15
    line: 1
    column: 7
  end:
    index: 16
    line: 1
    column: 8
- token: Break
  start:
    index: 16
    line: 1
    column: 8
  end:
    index: 18
    line: 2
    column: 0

