tests/suite/snapshots/suite__case_4q9f.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: Separator
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Folded
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 5
    line: 0
    column: 5
- token: Break
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 7
    line: 1
    column: 0
- token: Indent
  start:
    index: 7
    line: 1
    column: 0
  end:
    index: 8
    line: 1
    column: 1
- token: Scalar
  start:
    index: 8
    line: 1
    column: 1
  end:
    index: 10
    line: 1
    column: 3
- token: ScalarSpace
  start:
    index: 10
    line: 1
    column: 3
  end:
    index: 12
    line: 2
    column: 0
- token: Indent
  start:
    index: 12
    line: 2
    column: 0
  end:
    index: 13
    line: 2
    column: 1
- token: Scalar
  start:
    index: 13
    line: 2
    column: 1
  end:
    index: 15
    line: 2
    column: 3
- token: Break
  start:
    index: 15
    line: 2
    column: 3
  end:
    index: 17
    line: 3
    column: 0
- token: Indent
  start:
    index: 17
    line: 3
    column: 0
  end:
    index: 18
    line: 3
    column: 1
- token: ScalarBreak
  start:
    index: 18
    line: 3
    column: 1
  end:
    index: 20
    line: 4
    column: 0
- token: Indent
  start:
    index: 20
    line: 4
    column: 0
  end:
    index: 21
    line: 4
    column: 1
- token: Scalar
  start:
    index: 21
    line: 4
    column: 1
  end:
    index: 23
    line: 4
    column: 3
- token: Break
  start:
    index: 23
    line: 4
    column: 3
  end:
    index: 25
    line: 5
    column: 0
- token: Indent
  start:
    index: 25
    line: 5
    column: 0
  end:
    index: 25
    line: 5
    column: 0
- token: ScalarBreak
  start:
    index: 25
    line: 5
    column: 0
  end:
    index: 27
    line: 6
    column: 0
- token: Indent
  start:
    index: 27
    line: 6
    column: 0
  end:
    index: 27
    line: 6
    column: 0
- token: ScalarBreak
  start:
    index: 27
    line: 6
    column: 0
  end:
    index: 29
    line: 7
    column: 0
- token: Indent
  start:
    index: 29
    line: 7
    column: 0
  end:
    index: 30
    line: 7
    column: 1
- token: Scalar
  start:
    index: 30
    line: 7
    column: 1
  end:
    index: 32
    line: 7
    column: 3
- token: ScalarBreak
  start:
    index: 32
    line: 7
    column: 3
  end:
    index: 34
    line: 8
    column: 0

