tests/suite/snapshots/suite__case_4qfq.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: SequenceEntry
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Separator
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: Literal
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Scalar
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 9
- token: ScalarBreak
  start:
    line: 1
    column: 9
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: SequenceEntry
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Separator
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: Folded
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: Break
  start:
    line: 2
    column: 3
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: ScalarBreak
  start:
    line: 3
    column: 1
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 2
- token: ScalarBreak
  start:
    line: 4
    column: 2
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 2
- token: Scalar
  start:
    line: 5
    column: 2
  end:
    line: 5
    column: 12
- token: ScalarBreak
  start:
    line: 5
    column: 12
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 0
- token: SequenceEntry
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 1
- token: Separator
  start:
    line: 6
    column: 1
  end:
    line: 6
    column: 2
- token: Literal
  start:
    line: 6
    column: 2
  end:
    line: 6
    column: 3
- token: IndentationIndicator
  start:
    line: 6
    column: 3
  end:
    line: 6
    column: 4
- token: Break
  start:
    line: 6
    column: 4
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 1
- token: Scalar
  start:
    line: 7
    column: 1
  end:
    line: 7
    column: 10
- token: ScalarBreak
  start:
    line: 7
    column: 10
  end:
    line: 8
    column: 0
- token: Indent
  start:
    line: 8
    column: 0
  end:
    line: 8
    column: 0
- token: SequenceEntry
  start:
    line: 8
    column: 0
  end:
    line: 8
    column: 1
- token: Separator
  start:
    line: 8
    column: 1
  end:
    line: 8
    column: 2
- token: Folded
  start:
    line: 8
    column: 2
  end:
    line: 8
    column: 3
- token: Break
  start:
    line: 8
    column: 3
  end:
    line: 9
    column: 0
- token: Indent
  start:
    line: 9
    column: 0
  end:
    line: 9
    column: 1
- token: Scalar
  start:
    line: 9
    column: 1
  end:
    line: 9
    column: 9
- token: ScalarBreak
  start:
    line: 9
    column: 9
  end:
    line: 10
    column: 0

