tests/suite/snapshots/suite__case_4uyu.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: DoubleQuote
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: DoubleQuoted
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 9
- token: Escape
  start:
    line: 0
    column: 9
  end:
    line: 0
    column: 10
- token: EscapeCode
  start:
    line: 0
    column: 10
  end:
    line: 0
    column: 11
- token: DoubleQuoted
  start:
    line: 0
    column: 11
  end:
    line: 0
    column: 16
- token: DoubleQuote
  start:
    line: 0
    column: 16
  end:
    line: 0
    column: 17
- token: Break
  start:
    line: 0
    column: 17
  end:
    line: 1
    column: 0

