tests/suite/snapshots/suite__case_4wa9.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: SequenceEntry
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Indent
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: Scalar
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 5
- token: MappingValue
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 6
- token: Separator
  start:
    line: 0
    column: 6
  end:
    line: 0
    column: 7
- token: Literal
  start:
    line: 0
    column: 7
  end:
    line: 0
    column: 8
- token: IndentationIndicator
  start:
    line: 0
    column: 8
  end:
    line: 0
    column: 9
- token: Break
  start:
    line: 0
    column: 9
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 4
- token: Scalar
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 7
- token: ScalarBreak
  start:
    line: 1
    column: 7
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 2
- token: Scalar
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 5
- token: MappingValue
  start:
    line: 2
    column: 5
  end:
    line: 2
    column: 6
- token: Separator
  start:
    line: 2
    column: 6
  end:
    line: 2
    column: 7
- token: Literal
  start:
    line: 2
    column: 7
  end:
    line: 2
    column: 8
- token: Break
  start:
    line: 2
    column: 8
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 4
- token: Scalar
  start:
    line: 3
    column: 4
  end:
    line: 3
    column: 7
- token: ScalarBreak
  start:
    line: 3
    column: 7
  end:
    line: 4
    column: 0

