tests/suite/snapshots/suite__case_4zym.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 5
    line: 0
    column: 5
- token: MappingValue
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: Separator
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 7
    line: 0
    column: 7
- token: Scalar
  start:
    index: 7
    line: 0
    column: 7
  end:
    index: 11
    line: 0
    column: 11
- token: ScalarSpace
  start:
    index: 11
    line: 0
    column: 11
  end:
    index: 13
    line: 1
    column: 0
- token: Indent
  start:
    index: 13
    line: 1
    column: 0
  end:
    index: 14
    line: 1
    column: 1
- token: Separator
  start:
    index: 14
    line: 1
    column: 1
  end:
    index: 15
    line: 1
    column: 2
- token: Scalar
  start:
    index: 15
    line: 1
    column: 2
  end:
    index: 20
    line: 1
    column: 7
- token: Break
  start:
    index: 20
    line: 1
    column: 7
  end:
    index: 22
    line: 2
    column: 0
- token: Indent
  start:
    index: 22
    line: 2
    column: 0
  end:
    index: 22
    line: 2
    column: 0
- token: Scalar
  start:
    index: 22
    line: 2
    column: 0
  end:
    index: 28
    line: 2
    column: 6
- token: MappingValue
  start:
    index: 28
    line: 2
    column: 6
  end:
    index: 29
    line: 2
    column: 7
- token: Separator
  start:
    index: 29
    line: 2
    column: 7
  end:
    index: 30
    line: 2
    column: 8
- token: DoubleQuote
  start:
    index: 30
    line: 2
    column: 8
  end:
    index: 31
    line: 2
    column: 9
- token: DoubleQuoted
  start:
    index: 31
    line: 2
    column: 9
  end:
    index: 35
    line: 2
    column: 13
- token: ScalarSpace
  start:
    index: 35
    line: 2
    column: 13
  end:
    index: 37
    line: 3
    column: 0
- token: Indent
  start:
    index: 37
    line: 3
    column: 0
  end:
    index: 38
    line: 3
    column: 1
- token: Separator
  start:
    index: 38
    line: 3
    column: 1
  end:
    index: 40
    line: 3
    column: 3
- token: DoubleQuoted
  start:
    index: 40
    line: 3
    column: 3
  end:
    index: 45
    line: 3
    column: 8
- token: DoubleQuote
  start:
    index: 45
    line: 3
    column: 8
  end:
    index: 46
    line: 3
    column: 9
- token: Break
  start:
    index: 46
    line: 3
    column: 9
  end:
    index: 48
    line: 4
    column: 0
- token: Indent
  start:
    index: 48
    line: 4
    column: 0
  end:
    index: 48
    line: 4
    column: 0
- token: Scalar
  start:
    index: 48
    line: 4
    column: 0
  end:
    index: 53
    line: 4
    column: 5
- token: MappingValue
  start:
    index: 53
    line: 4
    column: 5
  end:
    index: 54
    line: 4
    column: 6
- token: Separator
  start:
    index: 54
    line: 4
    column: 6
  end:
    index: 55
    line: 4
    column: 7
- token: Literal
  start:
    index: 55
    line: 4
    column: 7
  end:
    index: 56
    line: 4
    column: 8
- token: Break
  start:
    index: 56
    line: 4
    column: 8
  end:
    index: 58
    line: 5
    column: 0
- token: Indent
  start:
    index: 58
    line: 5
    column: 0
  end:
    index: 60
    line: 5
    column: 2
- token: Scalar
  start:
    index: 60
    line: 5
    column: 2
  end:
    index: 64
    line: 5
    column: 6
- token: ScalarBreak
  start:
    index: 64
    line: 5
    column: 6
  end:
    index: 66
    line: 6
    column: 0
- token: Indent
  start:
    index: 66
    line: 6
    column: 0
  end:
    index: 68
    line: 6
    column: 2
- token: Scalar
  start:
    index: 68
    line: 6
    column: 2
  end:
    index: 75
    line: 6
    column: 9
- token: ScalarBreak
  start:
    index: 75
    line: 6
    column: 9
  end:
    index: 77
    line: 7
    column: 0

